Ensure Logos are visible on dark mode

--- a/assets/css/_funding-authorities.scss
+++ b/assets/css/_funding-authorities.scss
@@ -5,6 +5,8 @@
 
     .image {
         flex: 400px 0 0;
+        background-color: white;
+        padding: 15px;
     }
     .title {
         font-weight: bold;
